k8s/blackpearl/system/weave-gitops/app/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gitops-app
  namespace: flux-system
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
    - host: &host gitops.${SECRET_INGRESS_DOMAIN}
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: gitops-app
                port:
                  number: 9001
  tls:
    - hosts:
        - *host
